# draftbench

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION.md  LICENSE  MANIFESTO.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/full/: README.md
data/mini/: README.md  cases.jsonl
data/rubrics/: README.md  dim1_claim_drafting_quality.json  dim2_specification_quality.json  dim3_durability.json  dim4_workflow_ux.json  dim5_safety_fabrication.json  dim6_confidentiality.json  dim7_integration_tco.json
draftbench/: __init__.py  __main__.py  anti_hallucination.py  blind_review.py  config.py  data_loader.py  evaluator.py  harness.py  metrics.py  prompts.py  uspto.py
draftbench/judges/: __init__.py  base.py  openrouter_judge.py  parsing.py
draftbench/layers/: __init__.py  hallucination.py  jurisdictional.py  section_112_us.py  therasense.py
draftbench/models/: __init__.py  base.py  openrouter_adapter.py
draftbench/scoring/: __init__.py  composite.py  report.py
scripts/: refresh_pricing.py  run_benchmark.py
tests/: conftest.py  test_anti_hallucination.py  test_composite.py  test_data_loader.py  test_hallucination.py  test_judge_parsing.py  test_jurisdictional.py  test_metrics.py  test_report.py  test_score_serialization.py  test_section_112_us.py  test_therasense.py  test_uspto.py
